[project]

name = "js.rs"
version = "0.0.1"
readme = "README.md"
authors = ["Tom Bebbington <tophattedcoder@gmail.com>"]
tags = ["script"]

[[lib]]

name = "js"
path = "src/lib/lib.rs"


[[bin]]

name = "js.rs"
path = "src/bin/bin.rs"

[dependencies.jit]

git = "https://github.com/TomBebbington/jit.rs.git"